--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -6,16 +6,18 @@
   margin: 0 auto;
   padding: 0.125rem 1rem 1.5rem;
   text-align: center;
+  background-color: #fff;
 
 }
 
 .title {
 
-  font-size: clamp(1.8rem, 4vw, 2.5rem);
-  font-weight: 600;
   font-family: 'Poppins', sans-serif;
+  font-size: clamp(1.8rem, 4vw, 2.5rem);
+  font-weight: 600;  
   color: #2d2f5e;
-  margin-bottom: /*1rem*/0.5rem;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
 
 }
 
