--- a/src/pages/Servicios/Servicios.module.css
+++ b/src/pages/Servicios/Servicios.module.css
@@ -1,17 +1,28 @@
-.title {
-  color: #2d2f5e;
-  font-size: 2.5em;
-  margin-bottom: 5rem;
-}
+
 
 .container {
+
   max-width: 60rem;
   margin: 0 auto;
-  padding: 2.5rem 1rem 1.5rem;
+  padding: 0.125rem 1rem 1.5rem;
   text-align: center;
+  background-color: #fff;
+
+}
+
+.title {
+
+  font-family: 'Poppins', sans-serif;
+  font-size: clamp(1.8rem, 4vw, 2.5rem);
+  font-weight: 600;
+  color: #2d2f5e;  
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+
 }
 
 .paragraph {
+
   font-family: 'Poppins', sans-serif;
   font-size: clamp(1rem, 2.5vw, 1.2rem);
   color: #444;
@@ -19,34 +30,40 @@
   max-width: 60ch;
   margin: 0.5rem auto 1.5rem;
   text-align: center;
+
 }
 
 .servicesContainer {
+
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
-  list-style: none;
-  margin: 6rem 0 0;
-  padding: 0;
   gap: 1.5rem;
+  list-style: none;
+  padding: 1rem;
+  margin: 3.5rem;  
+
 }
 
 .serviceItem {
-     
-    background: linear-gradient(145deg, #2d2f5e, #1f2044);
+
+  background: linear-gradient(145deg, #2d2f5e, #1f2044);
   color: whitesmoke;
   border-radius: 0.5rem;
   padding: 1.5rem 1rem;
   text-align: center;
-  flex: 1 1 30%;
-  min-width: 200px;
+  flex: 1 1 280px;
+  max-width: 320px;
   transition: all 0.3s ease;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+
 }
 
 .serviceItem:hover {
+
   background-color: #1f2044;
   transform: translateY(-8px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+
 }
